SYS-feat-35a9.12: Support of unlimited types of recyclers for player_race_units 0b0. Also reworked Debris info popup in Universe

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.11#
+Текущая версия #35a9.12#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -52,12 +52,6 @@
     Теперь любая планета может быть назначена столицей
     Стоимость переноса столицы по умолчанию составляет 25.000 ТМ. Она  задается
     в таблице `config` переменной 'planet_capital_cost'
-[!] MVC
-    Базовая поддержка MVC - встроенная система моделей и видов
-[!] Рендерер имен
-    Добавлен механизм рендеринга имени пользователя
-    Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
-    механизм рендеринга имени пользователя
 [!] МПР - изменение алгоритма ракетного удара
     Алгоритм  ракетного  удара  теперь  не  привязан  к   численным   значениям
     идентификаторов юнитов и сильно оптимизирован по скорости
@@ -70,6 +64,38 @@
     В результате изменений в алгоритме существенно повысилась живучесть ПЗ  при
     ракетном ударе
     Добавлена поддержка усиления залпа для МПР
+[!] Поддержка модуля player_race_units 0b0
+    Теперь  движок  может   работать   с   неограниченным   количеством   типов
+    кораблей-переработчиков
+[!] Переработка: Полностью переделана работа с полем обломков
+    Полностью переписан алгоритм запуска переработчиков
+    В  попапе  вместе  с  абсолютными  теперь  показываются   и   относительные
+    значениями в процентах
+    В попапе добавилось три строки:
+    1. Строка "В полете" показывает емкость трюмов переработчиков пользователя,
+    которые уже летят на данное поле
+    2. Строка "На орбите" показывает емкость переработчиков на  орбите  текущей
+    планеты или луны
+    3. Строка "К переработке" показывает сумму двух предыдущих строк
+    На  основном  экране  Вселенной  к  иконке  обломков  добавлена   индикация
+    процентного значения из строки "В полете". Она имеет цветовое кодирование:
+    1.  Зеленый  цвет  означает,  что  прибывающие   флоты   игрока   полностью
+    переработают поле обломков на ресурсы
+    2.  Желтый  цвет  означает,  что  к   полю   летит   некоторое   количество
+    переработчиков, которых не хватит что бы целиком переработать  обломки,  но
+    на  текущей  планете  есть  достаточно  переработчиков,  что  бы  полностью
+    обработать поле
+    3. Оранжевый означает, что к полю летит флот иргока с  переработчиками,  но
+    их не хватит на полную обработку обломков, даже  включая  те  корабли,  что
+    находятся на орбите
+    4.  Красный  цвет  значит,  что  к  полю  обломков  не  летит   ни   одного
+    переработчика игрока
+[!] MVC
+    Базовая поддержка MVC - встроенная система моделей и видов
+[!] Рендерер имен
+    Добавлен механизм рендеринга имени пользователя
+    Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
+    механизм рендеринга имени пользователя
 
 [+] Добавлен пункт меню "Тёмная материя"
 [+] Обзор Империи: Значительно оптимизирован HTML-код
@@ -83,6 +109,17 @@
     Система модулей переписана с учетом базовой поддержки MVC
     Автоматическая загрузка языков
 
+[~] Вселенная
+    Убрано количество летящих флотов - эта информация есть в навбаре
+    Полностью переписана работа AJAX-части,  отвечающей  за  отправку  шпионов,
+    переработчиков и ракет
+    Количество переработчиков теперь включает все виды кораблей, которые  могут
+    перерабатывать обломки
+    Интерфейс  запуска  ракет  использует  группу  защитных  сооружений,  а  не
+    хард-кодед перечень, как было раньше
+[~] Обзор планеты
+    Переписана процедура отсылки переработчиков
+    Теперь выводится результат отсылки переработчиков
 [~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
     проставлены ссылки на соответствующие страницы
 [~] HTTPS: Теперь СН нормально работает и по HTTPS протоколу
@@ -101,15 +138,18 @@
     кораблей и увеличилась эффективность против средних кораблей
     Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
     против плазменных
-[~] Вселенная: Интерфейс запуска ракет использует группу защитных сооружений, а
-    не хард-кодед перечень, как было раньше
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
-[%] Локализация: Исправлена ошибка чтения информации о локализации
+[%] Локализация
+    Исправлена ошибка чтения информации о локализации
+    Небольшая правка опечаток в русской локализации
 [%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
     лого и отсутствии внешнего текста Альянса
 [%] Вселенная: Исправлена опечатка в легенде
-[%] Локализация: Небольшая правка опечаток в русской локализации
+[%] Обзор планеты
+    Добавлена проверка на уровень губернатора при его отображении - если  вдруг
+    при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
+    уровня. В нормальных условиях такого произойти не может
 
 [@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
     строки, включая Линуксовские и Маковские форматы файлов
@@ -144,6 +184,7 @@
 [@] Исправлена очепятка в названии константы технологии ионного двигателя
 [@] Система: Численные значения для защитных сооружений и ракет заменены  везде
     на константы
+[@] Библиотека "tw-sack.js" больше не используется - она заменена на jQuery
 
 
 
