UNI-feat-35a9.15: Reworked how works popups in Universe

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.13#
+Текущая версия #35a9.15#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -110,6 +110,8 @@
     Автоматическая загрузка языков
 
 [~] Вселенная
+    Шаблоны попапов легенды, планет, лун, обломков, игроков и альянсов вынесены
+    из JS-скрипта в шаблон страницы
     Убрано количество летящих флотов - эта информация есть в навбаре
     Полностью переписана работа AJAX-части,  отвечающей  за  отправку  шпионов,
     переработчиков и ракет
@@ -117,6 +119,19 @@
     перерабатывать обломки
     Интерфейс  запуска  ракет  использует  группу  защитных  сооружений,  а  не
     хард-кодед перечень, как было раньше
+    В попап легенды добавлены расшифровки для иконок действия
+    В попапе планеты показывается её диаметр
+    В попапе луны миссия  "Уничтожить"  показывается  только  если  на  текущей
+    планете игрока есть ЗС
+    Из попапа игрока убраны ссылки - все, что можно было  сделать  по  ссылкам,
+    можно теперь
+    Добавлено новая  иконка  действия  -  "Статистика".  Её  тултип  показывает
+    статистику игрока
+    Расширена подсказка
+[~] Статистика
+    Теперь переход по определенной позиции  (например  со  страницы  Вселенной)
+    скроллирует страницу сразу на эту позицию
+    Немного уменьшен размер страницы статистики
 [~] Обзор планеты
     Переписана процедура отсылки переработчиков
     Теперь выводится результат отсылки переработчиков
