--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.22#
+Текущая версия #35a9.23#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -153,6 +153,8 @@
     кораблей и увеличилась эффективность против средних кораблей
     Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
     против плазменных
+[~] Обзор  Империи:  В  колонку  "ИТОГО"  добавлена  сумма  по  строящимся    и
+    прибывающим на планеты юнитам
 
 [%] Фаланга: Теперь нельзя сканировать удаленную планету
 [%] Локализация
@@ -165,6 +167,8 @@
     Добавлена проверка на уровень губернатора при его отображении - если  вдруг
     при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
     уровня. В нормальных условиях такого произойти не может
+[%] Флоты: Исправлена ошибка отправки корабля,  если  его  ID  больше  300  или
+    меньше 200
 
 [@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
     строки, включая Линуксовские и Маковские форматы файлов
