STA-feat-35a9.25: Now from statistics and records can be hidden admins and/or specified users. Also added HTML META tag control facility

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.24#
+Текущая версия #35a9.25#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -29,6 +29,15 @@
     ТМ
     Описание текущей расы доступно на странице Императора. Там же  есть  ссылка
     на описание всех рас в игре с указанием их символов
+[#] Модули: Расовые юниты - требуется наличие модуля "Расы"
+    Шесть уникальных юнитов - по одной каждой из рас:
+    Земная "Лень" - боевой солнечный спутник
+    Лунная "Зависть" - легкий бомбардировщик
+    Меркурианское "Обжорство" - емкий переработчик
+    Венерианский "Гнев" - истребитель-перехватчик
+    Марсианская "Гордыня" - усовершенствованный линейный крейсер
+    Республиканская "Жадность" - боевой транспорт
+
 
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
     планетой
@@ -90,6 +99,19 @@
     находятся на орбите
     4.  Красный  цвет  значит,  что  к  полю  обломков  не  летит   ни   одного
     переработчика игрока
+[!] Статистика
+    Теперь можно управлять появлением игроков  в  статистике  и  рекордах.  Для
+    этого на странице настроек сервера появились дополнительные настройки.  Они
+    размещаются в разделе "Статистика и рекорды"
+    Отключение настройки "Прятать админов" добавит в статистику и рекорды  всех
+    пользователей с  authlevel > 0. По умолчанию она включена
+    Настройка "Прятать игроков" позволяет указать  через  запятую  перечень  ID
+    игроков, которые не будут участвовать в статистике и  рекордах.  Это  может
+    быть полезно для создания NPC - ботов или  игроков,  которые  исполняют  их
+    роли
+    Так  же  в  этот  раздел  вынесена  настройка  расписания   автоматического
+    обновления статистики. ВНИМАНИЕ!!! КРАЙНЕ НЕ РЕКОМЕНДУЕТСЯ МЕНЯТЬ  ЗНАЧЕНИЕ
+    ПО УМОЛЧАНИЮ!!!
 [!] MVC
     Базовая поддержка MVC - встроенная система моделей и видов
 [!] Рендерер имен
@@ -105,6 +127,10 @@
 [+] Список планет: Значительно оптимизирован HTML-код
     В Списке планет убрана иконка, отвечающая за исследование вследствие полной
     бессмысленности
+[+] Реклама
+    Добавлена возможность управлять мета-тегами 'description' и 'keywords'  без
+    редактирования темплейта! Их содержимое хранится в таблице `config` в полях
+    `adv_seo_meta_description` и `adv_seo_meta_keywords` соответственно
 [+] Модули
     Система модулей переписана с учетом базовой поддержки MVC
     Автоматическая загрузка языков
