--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a9.25#
+Текущая версия #35a10.0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -118,6 +118,17 @@
     Добавлен механизм рендеринга имени пользователя
     Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
     механизм рендеринга имени пользователя
+[!] Чат: Переписан чат
+    Чат теперь инкрементальный - с сервера передается не всё содержимое чата, а
+    только новые сообщения. Чат  корректно  работает  когда  у  игрока  открыто
+    несколько окон с чатом
+    Исправлена проблема со скроллированием чата в Chrome v20+
+    Теперь при отключении чата по таймауту содержимое окна не  стирается,  а  в
+    него добавляется соответствующее сообщение. Так же прячутся элементы ввода:
+    выбор цветов, строка сообщения, кнопка "Отправить" и панель смайлов
+    Основное окно чата переписано под preMVC
+    Новый код чата (как JS, так и PHP) заметно компактнее, аккуратнее и быстрее
+    старого
 
 [+] Добавлен пункт меню "Тёмная материя"
 [+] Обзор Империи: Значительно оптимизирован HTML-код
