WIKI-feat-35a11.0: Techtree rewrite. Also misc changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a10.0#
+Текущая версия #35a11.0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -38,7 +38,6 @@
     Марсианская "Гордыня" - усовершенствованный линейный крейсер
     Республиканская "Жадность" - боевой транспорт
 
-
 [!] Телепортация планеты - новая возможность, доступна на  странице  управления
     планетой
     Телепортация может производится только на свободное место - там, где нет ни
@@ -61,7 +60,8 @@
     Теперь любая планета может быть назначена столицей
     Стоимость переноса столицы по умолчанию составляет 25.000 ТМ. Она  задается
     в таблице `config` переменной 'planet_capital_cost'
-[!] МПР - изменение алгоритма ракетного удара
+[!] МПР
+    Изменение алгоритма ракетного удара
     Алгоритм  ракетного  удара  теперь  не  привязан  к   численным   значениям
     идентификаторов юнитов и сильно оптимизирован по скорости
     Теперь при атаке МПР учитываются  щиты  оборонных  сооружений.  Это  должно
@@ -76,7 +76,8 @@
 [!] Поддержка модуля player_race_units 0b0
     Теперь  движок  может   работать   с   неограниченным   количеством   типов
     кораблей-переработчиков
-[!] Переработка: Полностью переделана работа с полем обломков
+[!] Переработка
+    Полностью переделана работа с полем обломков
     Полностью переписан алгоритм запуска переработчиков
     В  попапе  вместе  с  абсолютными  теперь  показываются   и   относительные
     значениями в процентах
@@ -118,7 +119,8 @@
     Добавлен механизм рендеринга имени пользователя
     Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
     механизм рендеринга имени пользователя
-[!] Чат: Переписан чат
+[!] Чат
+    Переписан чат
     Чат теперь инкрементальный - с сервера передается не всё содержимое чата, а
     только новые сообщения. Чат  корректно  работает  когда  у  игрока  открыто
     несколько окон с чатом
@@ -129,13 +131,24 @@
     Основное окно чата переписано под preMVC
     Новый код чата (как JS, так и PHP) заметно компактнее, аккуратнее и быстрее
     старого
+[!] Дерево технологий
+    Полностью переписано дерево технологий (бывш. techtree.php)
+    Рядом с названиями юнитов там, где это имеет смысл, отображаются их  уровни
+    в Империи/на текущей планете
+    Теперь вместо полного уровня с учетом бонусов отображаются отдельно базовые
+    уровни и отдельно бонус к ним
+    Добавлена  поддержка  дополнительных  требований  к  строительству   юнитов
+    (например - модуля расовых юнитов)
 
-[+] Добавлен пункт меню "Тёмная материя"
-[+] Обзор Империи: Значительно оптимизирован HTML-код
+[+] Меню
+    Добавлен пункт меню "Тёмная материя"
+[+] Обзор Империи
+    Значительно оптимизирован HTML-код
     Размер HTML-кода уменьшен на величину от 30% и в отдельных случаях до  80%.
     Среднему игроку оптимизация даст уменьшение размера загружаемого  файла  на
     40-50%% (включает так же выигрышь от оптимизации Списка планет - см.ниже)
-[+] Список планет: Значительно оптимизирован HTML-код
+[+] Список планет
+    Значительно оптимизирован HTML-код
     В Списке планет убрана иконка, отвечающая за исследование вследствие полной
     бессмысленности
 [+] Реклама
@@ -174,26 +187,48 @@
     Теперь выводится результат отсылки переработчиков
 [~] На странице "Тёмная материя" дополнен список возможного использования ТМ  и
     проставлены ссылки на соответствующие страницы
-[~] HTTPS: Теперь СН нормально работает и по HTTPS протоколу
-[~] Настройки пользователей: страница переписана с учетом MVC
+[~] HTTPS
+    Теперь СН нормально работает и по HTTPS протоколу
+[~] Настройки пользователей
+    Страница переписана с учетом MVC
 [~] Император
     Со страницы убраны баннер и юзербар
     Страница переделана в preMVC
 [~] Чат
     Увеличена длина поля для ника в чате
-[~] UBEv3: Улучшена поддержка залпового огня
-[~] Новапедия: Улучшено отображение информации о кораблях и обороне
-[~] Флот: небольшой ребаланс кораблей
+[~] UBEv3
+    Улучшена поддержка залпового огня
+[~] Новапедия
+    Улучшено отображение информации о кораблях и обороне
+[~] Флот
+    Небольшой ребаланс кораблей
     Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
     корабля изменилось незначительно, благодаря изменению коэфициента  усиления
     залпа. Немного уменьшилась эффективность против наземной обороны  и  легких
     кораблей и увеличилась эффективность против средних кораблей
     Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
     против плазменных
-[~] Обзор  Империи:  В  колонку  "ИТОГО"  добавлена  сумма  по  строящимся    и
-    прибывающим на планеты юнитам
+[~] Обзор Империи
+    В колонку "ИТОГО" добавлена сумма по строящимся и  прибывающим  на  планеты
+    юнитам
+    Теперь юниты всегда групируются согласно их принадлежности.  Например,  при
+    подключении модуля расовых юнитов они добавляются в категорию "Флот", а  не
+    как ранее в конце таблицы
+[~] Исследования
+    Добавлена индикация бонусных уровней (например, от  премиума)  на  страницу
+    исследований
+[~] Наемники
+    Добавлена индикация бонусных уровней (например, от  премиума)  на  страницу
+    наемников
+[~] Стили
+    Цвет бонусов изменен с "yellow" на "gold" - это даст  возможность  отличать
+    их от, например, прибывающих на планету юнитов
+[~] Локализация
+    К эффектам Технолога и  Фортификатора  добавлена  информация  о  добавлении
+    слотов к очередям
 
-[%] Фаланга: Теперь нельзя сканировать удаленную планету
+[%] Фаланга
+    Теперь нельзя сканировать удаленную планету
 [%] Локализация
     Исправлена ошибка чтения информации о локализации
     Небольшая правка опечаток в русской локализации
@@ -204,43 +239,47 @@
     Добавлена проверка на уровень губернатора при его отображении - если  вдруг
     при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
     уровня. В нормальных условиях такого произойти не может
-[%] Флоты: Исправлена ошибка отправки корабля,  если  его  ID  больше  300  или
-    меньше 200
+[%] Флоты
+    Исправлена ошибка отправки корабля, если его ID больше 300 или меньше 200
 
-[@] js_safe_string() теперь корректно работает со строками,  где  есть  перевод
-    строки, включая Линуксовские и Маковские форматы файлов
 [@] Темплейты
     Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
     переменная PTL {PAGE_HEADER}
-[@] Почти везде из текста убраны ссылки на переменную  $GLOBALS  для  поддержки
-    рефакторинга в IDE
+    Содержимое переменной $template_result автоматически загружаетя в  темплейт
+    в файле index.php
+    Файл темплейта _result_message автоматически  подгружается  при  рендеринге
+    темплейта, если в структуре переменных темплейта есть массив 'result'
 [@] Модули
-    Теперь можно указывать  в  качестве  страницы  загрузки  файла  локализации
-    пустое множество '' - файлы в этом массиве будут загружаться всегда
-[@] Инициализация
     Изменена процедура инициализации  -  модули  теперь  грузятся  до  проверки
     наличия  страниц.  Это  сделано  на  случай,  если  модуль  добавляет  свои
     собственные страницы как, например, модуль Премиума и модуль Рас
-[@] Содержимое переменной $template_result автоматически загружаетя в  темплейт
-    в файле index.php
-[@] Файл темплейта _result_message автоматически  подгружается  при  рендеринге
-    темплейта, если в структуре переменных темплейта есть массив 'result'
-[@] Модули
+    Теперь можно указывать  в  качестве  страницы  загрузки  файла  локализации
+    пустое множество '' - файлы в этом массиве будут загружаться всегда
     Поддержка  дерева  зависимости  модулей  -  теперь  можно  делать   модули,
     зависящие от других модулей
     Автоматическая загрузка зависимых модулей в правильном порядке
-[@] Убран неиспользуемый код "скорострела"
-[@] Из файла vars.php выделены три  отдельных  файла  со  структурами,  боевыми
+[@] Файлы
+    Из файла vars.php выделены три  отдельных  файла  со  структурами,  боевыми
     юнитами и всеми остальными
     Так же добавлена дополнительная служебная информация для  того,  что  бы  в
     симуляторе не пропадали защитные сооружения  при  добавлении  новых  юнитов
     через модули
     Убраны неиспользуемые данные "скорострела"
     Из информации о боевых юнитов убраны ненужные данные о единичных усилениях
-[@] Исправлена очепятка в названии константы технологии ионного двигателя
-[@] Система: Численные значения для защитных сооружений и ракет заменены  везде
-    на константы
-[@] Библиотека "tw-sack.js" больше не используется - она заменена на jQuery
+[@] Код
+    Численные значения для  защитных  сооружений  и  ракет  заменены  везде  на
+    константы
+    Почти везде из текста убраны ссылки на переменную  $GLOBALS  для  поддержки
+    рефакторинга в IDE
+    Библиотека "tw-sack.js" больше не используется - она заменена на jQuery
+    Исправлена очепятка в названии константы технологии ионного двигателя
+    Убран неиспользуемый код "скорострела"
+    js_safe_string() теперь корректно работает со строками,  где  есть  перевод
+    строки, включая Линуксовские и Маковские форматы файлов
+[@] MVC
+    Все страницы, переделанные под MVC, перемещены в /includes/pages
+[@] Меню
+    Заменены типы элементов меню на "lang" там, где это было возможно
 
 
 
