--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a11.5#
+Текущая версия #35a11.6#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -190,17 +190,19 @@
 [~] HTTPS
     Теперь СН нормально работает и по HTTPS протоколу
 [~] Настройки пользователей
-    Страница переписана с учетом MVC
+    Страница переделана в preMVC
+    Страница переписана без использования $parse
 [~] Император
     Со страницы убраны баннер и юзербар
     Страница переделана в preMVC
+    Страница переписана без использования $parse
 [~] Чат
     Увеличена длина поля для ника в чате
 [~] UBEv3
     Улучшена поддержка залпового огня
 [~] Новапедия
     Улучшено отображение информации о кораблях и обороне
-[~] Флот
+[~] Юниты/Корабли
     Небольшой ребаланс кораблей
     Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
     корабля изменилось незначительно, благодаря изменению коэфициента  усиления
@@ -226,6 +228,9 @@
 [~] Локализация
     К эффектам Технолога и  Фортификатора  добавлена  информация  о  добавлении
     слотов к очередям
+[~] Флот
+    Полностью локализована страница приглашения в САБ
+    Все страницы (fleet0-fleet5) переписаны без использования $parse
 
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
@@ -239,8 +244,10 @@
     Добавлена проверка на уровень губернатора при его отображении - если  вдруг
     при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
     уровня. В нормальных условиях такого произойти не может
-[%] Флоты
+[%] Флот
     Исправлена ошибка отправки корабля, если его ID больше 300 или меньше 200
+    Теперь  невозможно  пригласить  в  САБ  игрока,  на  которого   совершается
+    нападение
 
 [@] Темплейты
     Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
