STAT-feat-35a11.7: Added server option to hide players PM links from statistics page

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a11.6#
+Текущая версия #35a11.7#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -113,6 +113,8 @@
     Так  же  в  этот  раздел  вынесена  настройка  расписания   автоматического
     обновления статистики. ВНИМАНИЕ!!! КРАЙНЕ НЕ РЕКОМЕНДУЕТСЯ МЕНЯТЬ  ЗНАЧЕНИЕ
     ПО УМОЛЧАНИЮ!!!
+    Добавлена опция "Скрывать  ссылки  на  ЛС".  При  её  включении  в  таблице
+    статистики не показывается URL на создание личного сообщения игрокам
 [!] MVC
     Базовая поддержка MVC - встроенная система моделей и видов
 [!] Рендерер имен
