MOD-misc-35a12.0: Support for ali_ally_player v12a0 and player_premium v1b0. Also some misc changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a11.7#
+Текущая версия #35a12.0#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -117,6 +117,7 @@
     статистики не показывается URL на создание личного сообщения игрокам
 [!] MVC
     Базовая поддержка MVC - встроенная система моделей и видов
+    Все страницы, переделанные под MVC, перемещены в /includes/pages
 [!] Рендерер имен
     Добавлен механизм рендеринга имени пользователя
     Чат, статистика, Вселенная и страница Императора  теперь  используют  общий
@@ -141,6 +142,9 @@
     уровни и отдельно бонус к ним
     Добавлена  поддержка  дополнительных  требований  к  строительству   юнитов
     (например - модуля расовых юнитов)
+[!] Модули
+    Поддержка ali_ally_player 12a0
+    Поддержка player_premium 1b0
 
 [+] Меню
     Добавлен пункт меню "Тёмная материя"
@@ -278,15 +282,17 @@
 [@] Код
     Численные значения для  защитных  сооружений  и  ракет  заменены  везде  на
     константы
-    Почти везде из текста убраны ссылки на переменную  $GLOBALS  для  поддержки
+    Везде  из  текста  убраны  ссылки  на  переменную  $GLOBALS  для  поддержки
     рефакторинга в IDE
     Библиотека "tw-sack.js" больше не используется - она заменена на jQuery
     Исправлена очепятка в названии константы технологии ионного двигателя
     Убран неиспользуемый код "скорострела"
     js_safe_string() теперь корректно работает со строками,  где  есть  перевод
     строки, включая Линуксовские и Маковские форматы файлов
-[@] MVC
-    Все страницы, переделанные под MVC, перемещены в /includes/pages
+    sn_function_call теперь корректно отрабатывает несуществующие функции
+    Добавлена функция sn_get_groups()
+    eco_bld_tech.php теперь не использует $sn_data
+    Оптимизирован код Альянсов
 [@] Меню
     Заменены типы элементов меню на "lang" там, где это было возможно
 
