SYS-misc-35a12.3: More files cleared from using $parse

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.0#
+Текущая версия #35a12.3#
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -293,6 +293,9 @@
     Добавлена функция sn_get_groups()
     eco_bld_tech.php теперь не использует $sn_data
     Оптимизирован код Альянсов
+    Страница Контакты переписана в preMVC без использования $parse
+    Страницы  ТМ,  летящих  флотов,  обзора  планеты,  ресурсов,  симулятора  и
+    статистики переписаны без использования $parse
 [@] Меню
     Заменены типы элементов меню на "lang" там, где это было возможно
 
