NOTE-feat-35a12.4: Wrote Notes from scratch. Reworked Jumpgate interface. Also misc changes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.3#
+Текущая версия #35a12.4# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -73,7 +73,7 @@
     В результате изменений в алгоритме существенно повысилась живучесть ПЗ  при
     ракетном ударе
     Добавлена поддержка усиления залпа для МПР
-[!] Поддержка модуля player_race_units 0b0
+[!] Флот
     Теперь  движок  может   работать   с   неограниченным   количеством   типов
     кораблей-переработчиков
 [!] Переработка
@@ -134,6 +134,7 @@
     Основное окно чата переписано под preMVC
     Новый код чата (как JS, так и PHP) заметно компактнее, аккуратнее и быстрее
     старого
+    Увеличена длина поля для ника в чате
 [!] Дерево технологий
     Полностью переписано дерево технологий (бывш. techtree.php)
     Рядом с названиями юнитов там, где это имеет смысл, отображаются их  уровни
@@ -142,6 +143,8 @@
     уровни и отдельно бонус к ним
     Добавлена  поддержка  дополнительных  требований  к  строительству   юнитов
     (например - модуля расовых юнитов)
+[!] Заметки
+    С нуля написаны заметки. Что еще сказать?
 [!] Модули
     Поддержка ali_ally_player 12a0
     Поддержка player_premium 1b0
@@ -164,6 +167,8 @@
 [+] Модули
     Система модулей переписана с учетом базовой поддержки MVC
     Автоматическая загрузка языков
+[+] Планетарные врата
+    Интерфейс переделан по примеру страницы "Флоты на орбите"
 
 [~] Вселенная
     Шаблоны попапов легенды, планет, лун, обломков, игроков и альянсов вынесены
@@ -202,8 +207,6 @@
     Со страницы убраны баннер и юзербар
     Страница переделана в preMVC
     Страница переписана без использования $parse
-[~] Чат
-    Увеличена длина поля для ника в чате
 [~] UBEv3
     Улучшена поддержка залпового огня
 [~] Новапедия
@@ -237,6 +240,8 @@
 [~] Флот
     Полностью локализована страница приглашения в САБ
     Все страницы (fleet0-fleet5) переписаны без использования $parse
+[~] Регистрация
+    Изменено сообщение при регистрации игрока
 
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
@@ -252,8 +257,7 @@
     уровня. В нормальных условиях такого произойти не может
 [%] Флот
     Исправлена ошибка отправки корабля, если его ID больше 300 или меньше 200
-    Теперь  невозможно  пригласить  в  САБ  игрока,  на  которого   совершается
-    нападение
+    Теперь невозможно пригласить в САБ игрока, на которого летит этот САБ
 
 [@] Темплейты
     Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
@@ -271,7 +275,7 @@
     Поддержка  дерева  зависимости  модулей  -  теперь  можно  делать   модули,
     зависящие от других модулей
     Автоматическая загрузка зависимых модулей в правильном порядке
-[@] Файлы
+[@] Код
     Из файла vars.php выделены три  отдельных  файла  со  структурами,  боевыми
     юнитами и всеми остальными
     Так же добавлена дополнительная служебная информация для  того,  что  бы  в
@@ -279,7 +283,6 @@
     через модули
     Убраны неиспользуемые данные "скорострела"
     Из информации о боевых юнитов убраны ненужные данные о единичных усилениях
-[@] Код
     Численные значения для  защитных  сооружений  и  ракет  заменены  везде  на
     константы
     Везде  из  текста  убраны  ссылки  на  переменную  $GLOBALS  для  поддержки
@@ -296,8 +299,16 @@
     Страница Контакты переписана в preMVC без использования $parse
     Страницы  ТМ,  летящих  флотов,  обзора  планеты,  ресурсов,  симулятора  и
     статистики переписаны без использования $parse
+    Теперь в doquery() префикс {{table}} не используется и не обрабатывается
+    Страницы login.php, phalanx.php переписаны без использования $parse
+    JS: В объявлениях скриптов все конструкции  language="javascript"  заменены
+    на type="text/javascript"
 [@] Меню
     Заменены типы элементов меню на "lang" там, где это было возможно
+[@] MVC
+    Частичная поддержка структуры MVCv2 в init.php
+    Добавлена поддержка анонимных MVC-страниц в common.php
+    Добавлена поддержка MVC-страниц на страницы логина/регистрации
 
 
 
