--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.9# "MVC race reparse teleportation recycle"
+Текущая версия #35a12.11# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -145,6 +145,14 @@
     (например - модуля расовых юнитов)
 [!] Заметки
     С нуля написаны заметки. Что еще сказать?
+[!] Друзья
+    Страница друзей написана с нуля
+    Теперь подробно сообщается  обо  всех  ошибках  и  результатах  операций  с
+    заявками
+    В личную почту отправляются сообщения по  приходу,  принятию  и  отверганию
+    заявки, а так же при разрыве дружеских отношений
+    Цветовое кодирование статуса друга: зеленый - онлайн, желтый -  бездействие
+    от 5 до 15 минут, оранжевый - оффлайн, красный - оффлайн более суток
 [!] Модули
     Поддержка ali_ally_player 12a0
     Поддержка player_premium 1b0
