WIKI-feat-35a12.16: Unit infopage wrote from scratch. Also misc fixes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.15# "MVC race reparse teleportation recycle"
+Текущая версия #35a12.16# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -156,6 +156,12 @@
 [!] Модули
     Поддержка ali_ally_player 12a0
     Поддержка player_premium 1b0
+[!] Новапедия
+    Полностью написана с нуля страница информации о юнитах
+    Теперь  в  Новапедии  показываются  требования  для  постройки/исследования
+    юнита
+    Теперь для корабля показываются данные для всех типов  двигателей,  которые
+    возможно на него установить
 
 [+] Меню
     Добавлен пункт меню "Тёмная материя"
@@ -250,15 +256,19 @@
     Все страницы (fleet0-fleet5) переписаны без использования $parse
 [~] Регистрация
     Изменено сообщение при регистрации игрока
+[~] Тёмная Материя
+    Немного переработан интерфейс страницы
 
 [%] Фаланга
     Теперь нельзя сканировать удаленную планету
 [%] Локализация
     Исправлена ошибка чтения информации о локализации
     Небольшая правка опечаток в русской локализации
-[%] Альянсы: Исправлена ошибка отображения полей информации Альянса при наличии
-    лого и отсутствии внешнего текста Альянса
-[%] Вселенная: Исправлена опечатка в легенде
+[%] Альянсы
+    Исправлена ошибка отображения полей информации Альянса при наличии  лого  и
+    отсутствии внешнего текста Альянса
+[%] Вселенная
+    Исправлена опечатка в легенде
 [%] Обзор планеты
     Добавлена проверка на уровень губернатора при его отображении - если  вдруг
     при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
@@ -266,6 +276,9 @@
 [%] Флот
     Исправлена ошибка отправки корабля, если его ID больше 300 или меньше 200
     Теперь невозможно пригласить в САБ игрока, на которого летит этот САБ
+[%] UBEv3
+    Исправлена ошибка с определением кораблей с  ID  >  300  как  защиты  и  их
+    восстановлением. Ошибка проявляется только в сторонних модулях
 
 [@] Темплейты
     Рендерер страницы теперь подхватывает заголовок страницы, если  он  есть  -
