MENU-feat-35a12.21: Adding icons to menu

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.19# "MVC race reparse teleportation recycle"
+Текущая версия #35a12.21# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -165,6 +165,8 @@
 
 [+] Меню
     Добавлен пункт меню "Тёмная материя"
+    Добавлена возможность добавления иконки к пункту меню.  Иконки  берутся  из
+    подкаталога 'icons' текущего скина
 [+] Обзор Империи
     Значительно оптимизирован HTML-код
     Размер HTML-кода уменьшен на величину от 30% и в отдельных случаях до  80%.
@@ -326,6 +328,9 @@
     на type="text/javascript"
 [@] Меню
     Заменены типы элементов меню на "lang" там, где это было возможно
+    Стандартное меню вынесено из файла template.php в includes/vars_menu.php
+    Парсер меню теперь понимает вложенные конструкции и константы для типа меню
+    'lang' - т.е. конструкции вида 'info[STRUC_MINE_METAL][description]'
 [@] MVC
     Частичная поддержка структуры MVCv2 в init.php
     Добавлена поддержка анонимных MVC-страниц в common.php
