MENU-misc-35a12.23: Added new property STYLE for direct support of CSS-styles in menu elements

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35a12.22# "MVC race reparse teleportation recycle"
+Текущая версия #35a12.23# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -167,6 +167,7 @@
     Добавлен пункт меню "Тёмная материя"
     Добавлена возможность добавления иконки к пункту меню.  Иконки  берутся  из
     подкаталога 'icons' текущего скина
+    Добавлена прямая поддержка CSS-стилей для элементов меню
 [+] Обзор Империи
     Значительно оптимизирован HTML-код
     Размер HTML-кода уменьшен на величину от 30% и в отдельных случаях до  80%.
