--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #35b0# "MVC race reparse teleportation recycle"
+Текущая версия #35b1# "MVC race reparse teleportation recycle"
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
@@ -272,6 +272,8 @@
     отсутствии внешнего текста Альянса
 [%] Вселенная
     Исправлена опечатка в легенде
+    Исправлена ошибка с перебросом по координатам [1:1:1] при выборе планеты из
+    выпадающего меню
 [%] Обзор планеты
     Добавлена проверка на уровень губернатора при его отображении - если  вдруг
     при прямых манипуляциях в базе у планеты есть ИД губернатора,  но  нет  его
