MENU-misc-35b2: ALT-property under server logo now shows server name

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,8 @@
 
 
 
-Текущая версия #35b1# "MVC race reparse teleportation recycle"
-~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия #35b2# "MVC race reparse teleportation recycle"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
     Шесть фиксированных рас: земляне, луниты, меркурианцы, венериане, марсиане,
@@ -73,9 +73,6 @@
     В результате изменений в алгоритме существенно повысилась живучесть ПЗ  при
     ракетном ударе
     Добавлена поддержка усиления залпа для МПР
-[!] Флот
-    Теперь  движок  может   работать   с   неограниченным   количеством   типов
-    кораблей-переработчиков
 [!] Переработка
     Полностью переделана работа с полем обломков
     Полностью переписан алгоритм запуска переработчиков
@@ -115,6 +112,9 @@
     ПО УМОЛЧАНИЮ!!!
     Добавлена опция "Скрывать  ссылки  на  ЛС".  При  её  включении  в  таблице
     статистики не показывается URL на создание личного сообщения игрокам
+    Теперь переход по определенной позиции  (например  со  страницы  Вселенной)
+    скроллирует страницу сразу на эту позицию
+    Немного уменьшен размер страницы статистики
 [!] MVC
     Базовая поддержка MVC - встроенная система моделей и видов
     Все страницы, переделанные под MVC, перемещены в /includes/pages
@@ -162,17 +162,24 @@
     юнита
     Теперь для корабля показываются данные для всех типов  двигателей,  которые
     возможно на него установить
+    Улучшено отображение информации о кораблях и обороне
 
 [+] Меню
     Добавлен пункт меню "Тёмная материя"
     Добавлена возможность добавления иконки к пункту меню.  Иконки  берутся  из
     подкаталога 'icons' текущего скина
     Добавлена прямая поддержка CSS-стилей для элементов меню
+    Под логотип сервера в ALT вместо 'supernova.ws' подкладывается имя сервера
 [+] Обзор Империи
     Значительно оптимизирован HTML-код
     Размер HTML-кода уменьшен на величину от 30% и в отдельных случаях до  80%.
     Среднему игроку оптимизация даст уменьшение размера загружаемого  файла  на
     40-50%% (включает так же выигрышь от оптимизации Списка планет - см.ниже)
+    В колонку "ИТОГО" добавлена сумма по строящимся и  прибывающим  на  планеты
+    юнитам
+    Теперь юниты всегда групируются согласно их принадлежности.  Например,  при
+    подключении модуля расовых юнитов они добавляются в категорию "Флот", а  не
+    как ранее в конце таблицы
 [+] Список планет
     Значительно оптимизирован HTML-код
     В Списке планет убрана иконка, отвечающая за исследование вследствие полной
@@ -186,8 +193,7 @@
     Автоматическая загрузка языков
 [+] Планетарные врата
     Интерфейс переделан по примеру страницы "Флоты на орбите"
-
-[~] Вселенная
+[+] Вселенная
     Шаблоны попапов легенды, планет, лун, обломков, игроков и альянсов вынесены
     из JS-скрипта в шаблон страницы
     Убрано количество летящих флотов - эта информация есть в навбаре
@@ -206,10 +212,7 @@
     Добавлено новая  иконка  действия  -  "Статистика".  Её  тултип  показывает
     статистику игрока
     Расширена подсказка
-[~] Статистика
-    Теперь переход по определенной позиции  (например  со  страницы  Вселенной)
-    скроллирует страницу сразу на эту позицию
-    Немного уменьшен размер страницы статистики
+
 [~] Обзор планеты
     Переписана процедура отсылки переработчиков
     Теперь выводится результат отсылки переработчиков
@@ -217,17 +220,10 @@
     проставлены ссылки на соответствующие страницы
 [~] HTTPS
     Теперь СН нормально работает и по HTTPS протоколу
-[~] Настройки пользователей
-    Страница переделана в preMVC
-    Страница переписана без использования $parse
 [~] Император
     Со страницы убраны баннер и юзербар
-    Страница переделана в preMVC
-    Страница переписана без использования $parse
 [~] UBEv3
     Улучшена поддержка залпового огня
-[~] Новапедия
-    Улучшено отображение информации о кораблях и обороне
 [~] Юниты/Корабли
     Небольшой ребаланс кораблей
     Сверхновая - атака уменьшена на  порядок.  При  этом  боевая  эффективность
@@ -236,12 +232,6 @@
     кораблей и увеличилась эффективность против средних кораблей
     Бомбардировщик: понижена эффективность против ионных орудий  и  повышена  -
     против плазменных
-[~] Обзор Империи
-    В колонку "ИТОГО" добавлена сумма по строящимся и  прибывающим  на  планеты
-    юнитам
-    Теперь юниты всегда групируются согласно их принадлежности.  Например,  при
-    подключении модуля расовых юнитов они добавляются в категорию "Флот", а  не
-    как ранее в конце таблицы
 [~] Исследования
     Добавлена индикация бонусных уровней (например, от  премиума)  на  страницу
     исследований
@@ -256,7 +246,6 @@
     слотов к очередям
 [~] Флот
     Полностью локализована страница приглашения в САБ
-    Все страницы (fleet0-fleet5) переписаны без использования $parse
 [~] Регистрация
     Изменено сообщение при регистрации игрока
 [~] Тёмная Материя
@@ -322,13 +311,13 @@
     Добавлена функция sn_get_groups()
     eco_bld_tech.php теперь не использует $sn_data
     Оптимизирован код Альянсов
-    Страница Контакты переписана в preMVC без использования $parse
-    Страницы  ТМ,  летящих  флотов,  обзора  планеты,  ресурсов,  симулятора  и
-    статистики переписаны без использования $parse
+    Все страницы интерфейса игроков переписаны без использования $parse
     Теперь в doquery() префикс {{table}} не используется и не обрабатывается
     Страницы login.php, phalanx.php переписаны без использования $parse
     JS: В объявлениях скриптов все конструкции  language="javascript"  заменены
     на type="text/javascript"
+    Теперь  движок  может   работать   с   неограниченным   количеством   типов
+    кораблей-переработчиков
 [@] Меню
     Заменены типы элементов меню на "lang" там, где это было возможно
     Стандартное меню вынесено из файла template.php в includes/vars_menu.php
