--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,8 +11,13 @@
 
 
 
-Текущая версия #35b5# "MVC race reparse teleportation recycle"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия #35c0#
+~~~~~~~~~~~~~~~~~~~~~
+
+
+
+Project "SuperNova.WS" Release 35 RC0 "MVC race reparse teleportation recycle"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [#] Модули: Расы
     Шесть фиксированных рас: земляне, луниты, меркурианцы, венериане, марсиане,
@@ -163,6 +168,7 @@
     Теперь для корабля показываются данные для всех типов  двигателей,  которые
     возможно на него установить
     Улучшено отображение информации о кораблях и обороне
+[!] readme.txt сконвертирован в UTF8
 
 [+] Меню
     Добавлен пункт меню "Тёмная материя"
